--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,10 @@
-numpy>=1.21.0
-pandas>=1.3.0
-yfinance>=0.2.0
-scikit-learn>=0.24.0
-scipy>=1.7.0
-matplotlib>=3.4.0
-ta>=0.7.0
-ratelimit>=2.2.1
-asyncio>=3.4.3
-
-# API and Message Queue
+# Core API Dependencies
 fastapi>=0.68.0
 uvicorn>=0.15.0
-redis>=4.0.0
-pika>=1.2.0
-aio-pika>=8.0.0
-pydantic>=1.8.0
-asyncio>=3.4.3
-websockets>=10.0
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
+
+# Testing
 pytest>=7.0.0
-pytest-asyncio>=0.16.0
+pytest-asyncio>=0.21.0
 httpx>=0.24.0  # Required for TestClient
-starlette>=0.14.2
