--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,20 @@ uvicorn>=0.15.0
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
 
+# Data Processing and Analysis
+pandas>=2.0.0
+numpy>=1.24.0
+yfinance>=0.2.0
+scikit-learn>=1.0.0
+scipy>=1.10.0
+ta>=0.10.0
+
+# Visualization
+matplotlib>=3.7.0
+
+# Rate Limiting
+ratelimit>=2.2.1
+
 # Testing
 pytest>=7.0.0
 pytest-asyncio>=0.21.0
