--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 # Core API Dependencies
-fastapi>=0.68.0
-uvicorn>=0.15.0
-pydantic>=2.0.0
+fastapi>=0.104.1
+uvicorn>=0.24.0
+pydantic>=2.5.2
 pydantic-settings>=2.0.0
 
 # Data Processing and Analysis
-pandas>=2.0.0
-numpy>=1.24.0
-yfinance>=0.2.0
-scikit-learn>=1.0.0
+pandas>=2.1.3
+numpy>=1.26.2
+yfinance>=0.2.32
+scikit-learn>=1.3.2
 scipy>=1.10.0
 ta>=0.10.0
 
@@ -18,7 +18,13 @@ matplotlib>=3.7.0
 # Rate Limiting
 ratelimit>=2.2.1
 
+# Queue Management
+redis>=5.0.1
+aio_pika>=9.3.1
+
 # Testing
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
-httpx>=0.24.0  # Required for TestClient
+pytest>=8.0.0
+pytest-asyncio>=0.23.2
+httpx>=0.25.2
+pytest-cov>=4.1.0
+psutil>=5.9.6
