--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ fastapi>=0.104.1
 uvicorn>=0.24.0
 pydantic>=2.5.2
 pydantic-settings>=2.0.0
-fastapi-rate-limit>=0.1.0
+slowapi>=0.1.0
 
 # Data Processing and Analysis
 pandas>=2.1.3
@@ -22,6 +22,9 @@ ratelimit>=2.2.1
 # Queue Management
 redis>=5.0.1
 aio_pika>=9.3.1
+
+# WebSocket Support
+websockets>=12.0
 
 # Testing
 pytest>=8.0.0
