--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "ratelimit>=2.2.1",
     "redis>=5.0.1",
     "aio_pika>=9.3.1",
-    "websockets>=12.0"
+    "websockets>=12.0",
+    "prometheus-fastapi-instrumentator>=0.22.0",
 ]
 
 [tool.setuptools]
