feat: implement GitHub Projects automation and CI infrastructure
- Add GitHub Actions workflows for project board automation
- Add infrastructure testing suite for CI components
- Implement project status tracking in .project/
- Add GitHub setup scripts and documentation
- Consolidate test configurations and Dockerfiles
- Update development dependencies and configurations

🧪 Test Results:

Infrastructure Tests:
✅ 35/35 tests passing
⏱️ 0.854s execution time

Core App Tests:
✅ 9 tests passing
❌ 17 known failures
📊 26 total tests
⏱️ 6.38s execution time

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ DATABASE_URL=postgresql://user:password@localhost:5432/market_analysis   # Postg
 
 # Development
 ENVIRONMENT=development   # Current environment (development/staging/production)
+
+# GitHub Configuration
+GITHUB_TOKEN=github_pat_YOUR_TOKEN_HERE   # GitHub personal access token
