--- a/.project/status/DEVELOPMENT_STATUS.yaml
+++ b/.project/status/DEVELOPMENT_STATUS.yaml
@@ -9,6 +9,8 @@ next_available_tasks:
   - 2
   - 3
   priority: 1
+  blocked_by: []
+  dependencies: []
 - id: 2
   prerequisites_met: false
   status: blocked
@@ -18,6 +20,9 @@ next_available_tasks:
   blocking:
   - 4
   priority: 2
+  blocked_by:
+  - 1
+  dependencies: []
 - id: 3
   prerequisites_met: false
   status: blocked
@@ -28,6 +33,9 @@ next_available_tasks:
   - 4
   - 5
   priority: 2
+  blocked_by:
+  - 1
+  dependencies: []
 - id: 4
   prerequisites_met: false
   status: blocked
@@ -37,6 +45,10 @@ next_available_tasks:
   blocking:
   - 6
   priority: 3
+  blocked_by:
+  - 2
+  - 3
+  dependencies: []
 - id: 5
   prerequisites_met: false
   status: blocked
@@ -45,6 +57,9 @@ next_available_tasks:
   description: Configure Prometheus and Grafana for system monitoring
   blocking: []
   priority: 3
+  blocked_by:
+  - 3
+  dependencies: []
 - id: 6
   prerequisites_met: false
   status: blocked
@@ -53,5 +68,7 @@ next_available_tasks:
   description: Add backtesting capabilities for analysis strategies
   blocking: []
   priority: 4
+  blocked_by:
+  - 4
+  dependencies: []
 completed_tasks: []
-
