--- a/requirements/requirements-core.txt
+++ b/requirements/requirements-core.txt
@@ -24,6 +24,9 @@ aio_pika>=9.3.1
 # WebSocket Support
 websockets>=12.0
 
+# Monitoring
+prometheus-fastapi-instrumentator>=6.1.0
+
 # Testing
 pytest>=8.0.0
 pytest-asyncio>=0.23.2
