🔄 sync: Update GitHub workflow configurations
🌐 GitHub Integration:
- Updated project-v2-trigger workflow
- Updated sync workflows between local and GitHub
- Updated project-v2 event handling
- Standardized workflow configurations across repositories

--- a/.github/workflows/sync-local-to-project.yml
+++ b/.github/workflows/sync-local-to-project.yml
@@ -31,7 +31,7 @@ jobs:
           
       - name: Sync to Project
         env:
-          GITHUB_TOKEN: ${{ secrets.PROJECT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cd .github/scripts
           node sync/index.js
