--- a/.github/workflows/project-v2-trigger.yml
+++ b/.github/workflows/project-v2-trigger.yml
@@ -15,7 +15,7 @@ jobs:
       
       - name: Run Project V2 Sync
         env:
-          GITHUB_TOKEN: ${{ secrets.PROJECT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cd .github/scripts
           npm ci
