test(infrastructure): Fix infrastructure test setup and module resolution
Test Stats:
- Test Suites: 6 passed, 6 total
- Tests: 30 passed, 30 total
- Time: 0.915s

Changes:
1. Move package.json to tests/infrastructure root
   - Add js-yaml and ajv dependencies
   - Configure Jest to run from root directory

2. Fix Docker configuration:
   - Update working directory to /app/tests/infrastructure
   - Mount correct node_modules paths
   - Install dependencies in root location

3. Fix module resolution:
   - Update import paths to use relative paths
   - Add moduleDirectories for better node_modules resolution
   - Fix module aliases in Jest config

4. Improve test isolation:
   - Each test group runs in its own Docker container
   - Prevent host node_modules interference
   - Clean up orphaned containers

This commit ensures all infrastructure tests run correctly in isolation,
making the test suite more reliable and maintainable.

--- a/.github/workflows/test-project-v2-events.yml
+++ b/.github/workflows/test-project-v2-events.yml
@@ -25,15 +25,15 @@ jobs:
         with:
           node-version: '18'
           
-      - name: Install Dependencies
+      - name: Install Infrastructure Test Dependencies
         run: |
-          cd .github/scripts
+          cd tests/infrastructure
           npm ci
           
-      - name: Test Event Handler
+      - name: Run Infrastructure Tests
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           EVENT_TYPE: ${{ github.event.inputs.event_type }}
         run: |
-          cd .github/scripts
-          node sync/test-index.js
+          cd tests/infrastructure
+          npm run test:infrastructure
