--- a/.github/scripts/package.json
+++ b/.github/scripts/package.json
@@ -4,11 +4,9 @@
   "description": "GitHub automation scripts",
   "type": "commonjs",
   "scripts": {
-    "test": "jest"
+    "test": "jest --config=jest.config.cjs"
   },
-  "devDependencies": {
-    "jest": "^29.7.0",
-    "js-yaml": "^4.1.0",
-    "ajv": "^8.12.0"
+  "dependencies": {
+    "@octokit/rest": "^20.0.2"
   }
 }
