--- a/.github/workflows/project-v2-trigger.yml
+++ b/.github/workflows/project-v2-trigger.yml
@@ -5,6 +5,8 @@ on:
     types: [opened, edited, deleted, closed, reopened, labeled, unlabeled]
   pull_request:
     types: [opened, edited, closed, reopened, labeled, unlabeled]
+  projects_v2_item:
+    types: [created, edited, deleted]
 
 jobs:
   sync_to_project:
