--- a/requirements/requirements-core.txt
+++ b/requirements/requirements-core.txt
@@ -6,6 +6,7 @@ pydantic-settings>=2.0.0
 slowapi>=0.1.0
 yfinance>=0.2.32
 ratelimit>=2.2.1
+prometheus-fastapi-instrumentator>=6.1.0
 
 # Data Processing and Analysis
 pandas>=2.1.3
