--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,19 @@
-# API Configuration
-API_HOST=0.0.0.0    # The host to bind the API to. Use 0.0.0.0 to listen on all interfaces
-API_PORT=8000       # Primary FastAPI service port
-METRICS_PORT=8090   # Port for Prometheus metrics endpoint
+# Environment variable examples for market-analysis
+# Copy this file to .env and set values before running locally
 
-# Application Settings
-APP_NAME="Market Analysis API"   # Display name of the application
-DEBUG=false                      # Enable/disable debug mode
+# FastAPI server configuration
+API_HOST=0.0.0.0
+API_PORT=8000
 
-# Queue Configuration
-REDIS_HOST=redis          # Redis server hostname
-REDIS_PORT=6379           # Default Redis port
-RABBITMQ_HOST=localhost   # RabbitMQ server hostname
-RABBITMQ_PORT=5672        # Default RabbitMQ port
+# Redis queue settings
+REDIS_HOST=localhost
+REDIS_PORT=6379
 
-# Database Configuration
-DATABASE_URL=postgresql://user:password@localhost:5432/market_analysis   # PostgreSQL connection string
+# Interactive Brokers connection (overrides Airflow connection if used)
+IBKR_HOST=
+IBKR_PORT=
+IBKR_CLIENT_ID=
 
-# Development
-ENVIRONMENT=development   # Current environment (development/staging/production)
+# Binance API credentials
+BINANCE_API_KEY=
+BINANCE_API_SECRET=
