--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -p no:pytest_asyncio -p no:helpconfig
+addopts = -p no:pytest_asyncio
 pythonpath = .
 testpaths = tests
 python_files = test_*.py
