chore: add all current files

--- a/docker/Dockerfile.airflow
+++ b/docker/Dockerfile.airflow
@@ -27,3 +27,4 @@ ENV PYTHONPATH=/app/src:$PYTHONPATH
 
 # Default entrypoint for Python execution
 ENTRYPOINT ["python"]
+CMD ["-m", "src.main", "--help"]
