feat: Add comprehensive VSCode Dev Container support
- Implement individual Dev Container configuration with Python/Data Analysis stack
- Add Docker-in-Docker support for container operations
- Configure VSCode extensions and settings for optimal development
- Include automated setup scripts and environment configuration
- Add comprehensive documentation and troubleshooting guides
- Support cross-platform development (macOS/Windows)
- Clean up Python cache files and __pycache__ directories
- Update Docker configuration for Dev Container compatibility
- Add Airflow requirements for data pipeline development

Part of multi-repository Dev Container architecture supporting both
individual repository development and unified workspace orchestration.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,15 @@ version: '3.8'
 
 services:
   api:
-    build: .
+    build:
+      context: .
+      args:
+        - API_PORT=${MARKET_API_PORT}
+    platform: "${DOCKER_DEFAULT_PLATFORM}"
     ports:
-      - "8000:8000"
+      - "${MARKET_API_PORT}:8000"
     environment:
-      - API_PORT=8000
+      - API_PORT=${MARKET_API_PORT}
       - API_HOST=0.0.0.0
       - PYTHONPATH=/app
     volumes:
@@ -16,7 +20,8 @@ services:
       - market_analysis_net
 
   test:
-    build: .
+    build:
+      context: .
     environment:
       - PYTHONPATH=/app
     volumes:
